// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSuggestItem is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiSuggestItem testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiSuggestItem__type euiSuggestItem__type--tint1"
  >
    <span
      data-euiicon-type="search"
    />
  </span>
  <span
    class="euiSuggestItem__label euiSuggestItem__labelDisplay--fixed euiSuggestItem__labelDisplay--expand euiSuggestItem__labelWidth50"
  >
    Test label
  </span>
  <span
    class="euiSuggestItem__description euiSuggestItem__description--truncate"
  />
</div>
`;

exports[`props descriptionDisplay as wrap is rendered 1`] = `
<div
  class="euiSuggestItem"
>
  <span
    class="euiSuggestItem__type euiSuggestItem__type--tint2"
  >
    <span
      data-euiicon-type="kqlValue"
    />
  </span>
  <span
    class="euiSuggestItem__label euiSuggestItem__labelDisplay--fixed euiSuggestItem__labelWidth50"
  >
    This is the description
  </span>
  <span
    class="euiSuggestItem__description euiSuggestItem__description--wrap"
  >
    This is the description
  </span>
</div>
`;

exports[`props item with no description has expanded label is rendered 1`] = `
<div
  class="euiSuggestItem"
>
  <span
    class="euiSuggestItem__type euiSuggestItem__type--tint2"
  >
    <span
      data-euiicon-type="kqlValue"
    />
  </span>
  <span
    class="euiSuggestItem__label euiSuggestItem__labelDisplay--fixed euiSuggestItem__labelDisplay--expand euiSuggestItem__labelWidth50"
  >
    This is the description
  </span>
  <span
    class="euiSuggestItem__description euiSuggestItem__description--truncate"
  />
</div>
`;

exports[`props labelDisplay as expand is rendered 1`] = `
<div
  class="euiSuggestItem"
>
  <span
    class="euiSuggestItem__type euiSuggestItem__type--tint2"
  >
    <span
      data-euiicon-type="kqlValue"
    />
  </span>
  <span
    class="euiSuggestItem__label euiSuggestItem__labelDisplay--expand"
  >
    This is the description
  </span>
  <span
    class="euiSuggestItem__description euiSuggestItem__description--truncate"
  >
    This is the description
  </span>
</div>
`;
